--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,39 @@
-Flask
-Flask-RESTful
-Flask-JWT
-Flask-SQLAlchemy
-uwsgi
+alembic==1.0.0
+aniso8601==4.0.1
+appdirs==1.4.3
+astroid==2.0.4
+attrs==18.2.0
+autopep8==1.3.5
+black==18.9b0
+certifi==2018.4.16
+click==6.7
+Flask==1.0.2
+Flask-Cors==3.0.7
+Flask-JWT==0.3.2
+Flask-Migrate==2.2.1
+Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+isort==4.3.4
+itsdangerous==0.24
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+Mako==1.0.7
+MarkupSafe==1.0
+mccabe==0.6.1
+pipenv==2018.7.1
+pycodestyle==2.4.0
+PyJWT==1.4.2
+pylint==2.1.1
+python-dateutil==2.7.3
+python-editor==1.0.3
+pytz==2018.7
+six==1.11.0
+SQLAlchemy==1.2.11
+toml==0.10.0
+uWSGI==2.0.17.1
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
+Werkzeug==0.14.1
+wrapt==1.10.11
+WTForms==2.2.1
