--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Migrate==2.2.1
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -31,7 +32,6 @@ pytz==2018.7
 six==1.11.0
 SQLAlchemy==1.2.11
 toml==0.10.0
-uWSGI==2.0.17.1
 virtualenv==16.0.0
 virtualenv-clone==0.3.0
 Werkzeug==0.14.1
